semi final gui